# d-anime-scraper

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  build_exe.bat  build_exe.sh  d_anime_scraper.spec  docker-compose.yml  gui_launcher.py  pyproject.toml  requirements.txt  ruff.toml  scraper.py  version.py  リリースノート.txt
.github/workflows/: release-build.yml
app/: scraper.py
d_anime_scraper/: __init__.py  scraper.py  version.py
tests/: test_basic.py
